--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,15 @@ body {
   background-color: black;
   color: white;
 }
+
+.dark-mode{
+  background-color: black;
+  color: white;
+}
+.light-mode{
+  background-color: white;
+  color: black;
+}
+h1{
+  font-size: 25px;
+}
